# ros2-6dof-robot-arm

./: .gitignore  Makefile  README.md
cad/: Parts.20260124-135702.FCBak  Parts.FCStd  gripper.step  link_end.step
src/my_robot_arm/: CMakeLists.txt  package.xml
src/my_robot_arm/launch/: display.launch.py
src/my_robot_arm/meshes/: link_0_base.stl  link_1_waist.stl  link_2_shoulder.stl  link_3_elbow.stl  link_4_elbow.stl  link_5_hand.stl  link_6_tool.stl  link_7_gripper_finger.stl
src/my_robot_arm/scripts/: simple_move.py  simple_pick.py
src/my_robot_arm/urdf/: arm.urdf.xacro
src/my_robot_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_robot_arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  moveit_controllers.yaml.save  my_robot_arm.srdf  ros2_controllers.yaml
src/my_robot_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
